# tint-extract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dawn.ref  release.sh
cmake/: SPIRV-Tools-header-gen.cmake  SPIRV-Tools-minimal.cmake
src/tint/cmd/tint/: main.cc
src/tint/lang/core/: BUILD.cmake
src/tint/lang/core/ir/transform/: resource_binding.h
src/tint/lang/hlsl/writer/: BUILD.bazel
src/tint/lang/spirv/reader/parser/: parser.cc
src/tint/lang/wgsl/reader/: BUILD.gn
src/tint/lang/wgsl/writer/: writer.cc
src/tint/utils/strconv/: parse_num.h
tests/: CMakeLists.txt  test.spvasm  test.wgsl
